infrastructure/configs/monitoring/ingress/alert-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alert-manager-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd,default-my-basic-auth@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: alerts.thekitty.zone
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: "basicauth-monitoring"
    nginx.ingress.kubernetes.io/auth-realm: "Monitoring Auth"
spec:
  rules:
  - host: alerts.thekitty.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              number: 9093
  tls:
    - secretName: alert-manager
      hosts:
        - alerts.thekitty.zone
