infrastructure/configs/monitoring/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-tls
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: grafana.thekitty.zone   
spec:
  rules:
  - host: grafana.thekitty.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 80
  tls:
    - secretName: grafana
      hosts:
        - grafana.thekitty.zone
