infrastructure/configs/monitoring/ingress/prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd,default-my-basic-auth@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: prometheus.thekitty.zone
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: "basicauth-monitoring"
    nginx.ingress.kubernetes.io/auth-realm: "Monitoring Auth"
spec:
  rules:
  - host: prometheus.thekitty.zone
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-prometheus
            port:
              number: 9090
  tls:
    - secretName: prometheus
      hosts:
        - prometheus.thekitty.zone
